    automatically generating an auxiliary predicate).

    Added a compile_aux_clauses/1 public method, based on a predicate with
    the same name in SWI-Prolog, to the built-in object "logtalk". This
    method is usually called from goal_expansion/2 hooks in order to compile
    auxiliary clauses generated for supporting an expanded goal.

    Updated the SWI-Prolog config file in order to prevent the auto-loading
    of module libraries when querying predicate properties from Logtalk.

    Added predicates findall_member/4-5 to the library object "meta" (based
    on Richard O'Keefe's draft Prolog library proposal).

    Added a library object, "meta_compiler", that can be used as an hook
    object to expand calls to the meta-predicates defined in the library
    object "meta" in order to avoid the meta-call overheads.

    Added a protocol, "loggingp", and category and object implementations,
    "logging" and "logger", declaring and defining basic functionality for
    logging events to files to the library.

    Added a protocol, "intervalp", and an object, "interval", declaring and
    defining basic temporal interval relations to the library (based on the
    James F. Allen Interval Algebra work).

    Added a category implementing named integer counters, "counters", to the
    library.

    Added predicates proper_prefix/2 and proper_suffix/2 to the library
    entities "listp", "list", and "difflist".

    Added predicate transpose/2 to the library object "pairs".

    Added two pseudo-examples for testing purposes, "lambdas_compiled" and
    "metapredicates_compiled", that make use of the new library object
    "meta_compiler".

    Added support for using the SyntaxHighlighter package (version 3.0.83 or
    later) by Alex Gorbatchev with Logtalk source code.

    Added missing syntax coloring of the else/0 conditional compilation
    directive to the GNU Source-highlight highlighter support.
