@@ -148,6 +148,7 @@
 			<string>current_op</string>
 			<string>char_conversion</string>
 			<string>current_char_conversion</string>
+			<string>ignore</string>
 			<string>once</string>
 			<string>repeat</string>
 			<string>atom_length</string>
