@@ -21,7 +21,7 @@
 
 	function Brush()
 	{
-		// Contributed by Paulo Moura (pmoura@logtalk.org); last revised on January 12, 2011
+		// Contributed by Paulo Moura (pmoura@logtalk.org); last revised on January 18, 2011
 		// http://logtalk.org/  
 
 		this.regexList = [
@@ -107,7 +107,7 @@
       // built-in control constructs
       { regex: new RegExp("\\b(ca(ll|tch)|throw)(?=[(])", 'g'), css: 'keyword'},
       { regex: new RegExp("\\b(true|fail|repeat)\\b", 'g'), css: 'keyword'},
-      { regex: new RegExp("\\bonce(?=[(])", 'g'), css: 'keyword'},
+      { regex: new RegExp("\\b(ignore|once)(?=[(])", 'g'), css: 'keyword'},
       // directives
 			{ regex: new RegExp("^\\s*:\-\\s(c(a(lls|tegory)|oinductive)|p(ublic|r(ot(ocol|ected)|ivate))|e(l(if|se)|n(coding|sure_loaded)|xport)|i(f|n(fo|itialization))|alias|d(ynamic|iscontiguous)|m(eta_predicate|od(e|ule)|ultifile)|reexport|s(et_(logtalk|prolog)_flag|ynchronized)|o(bject|p)|use(s|_module))(?=[(])", 'gm'), css: 'preprocessor' },
 			{ regex: new RegExp("^\\s*:\-\\s(e(lse|nd(if|_(category|object|protocol)))|dynamic|synchronized|threaded)\.", 'gm'), css: 'preprocessor' },
